# clij2-fft

./: .gitignore  LICENSE.txt  README.md  Roberts_build_notes.md  javacppbuild.sh  mvn_with_options.sh  pom.xml  release.properties
.github/workflows/: build-and-deploy.yml
docs/: releaselog.md
docs/buildlibs/: build.md  debug_visual_studio.md
docs/deconvolution/: RichardsonLucy.md
docs/fiji/: test_installation.md
docs/python/: clij-fft-python.md
lib/: make_universal_libs.sh
lib/linux-x86_64/: libclFFT.so.2.14.0
lib/macosx/: libclFFT.2.14.0.dylib  libclFFT.2.dylib  libclFFT.dylib  libclij2fft.dylib  libjniclij2fftWrapper.dylib
lib/macosx-arm64/: libclFFT.2.dylib  libclFFT.dylib  libclij2fft.dylib  libjniclij2fftWrapper.dylib
lib/macosx-universal2/: libclFFT.2.dylib  libclFFT.dylib  libclij2fft.dylib
lib/macosx-x86_64/: libclFFT.2.dylib  libclij2fft.dylib  libjniclij2fftWrapper.dylib
lib/win64/: clFFT.lib  clij2fft.lib
lib/windows-x86_64/: StatTimer.lib  clij2fft.lib
native/: CMakeLists.txt  cmakevs.sh  cppbuild.sh  setenvironment.bat
native/clij2fft/: CMakeLists.txt  clFFT.version.h  clij2fft.cpp  clij2fft.h  cppbuild.sh  stringify.py  totalvariationterm.cl
native/clij2fft/kernels/: cle_totalvariationterm.h
native/test/: CMakeLists.txt  convolvetest.cpp  deconvolutiontest.cpp  ffttest.cpp  makevariationkerneltest.cpp  test.cpp  tifstack.cpp  tifstack.h
python/: README.md  Test_Installation.ipynb  Test_Installation.py  buildandeditableinstall.sh  copylibsconda.sh  editableinstall.sh  hackinstall.sh  python.md  pythonbuild.sh  setup.py  test_libs.py
python/clij2fft/: libs.py  pad.py  print_info.py  richardson_lucy.py  richardson_lucy_dask.py  richardson_lucy_dask_multi_gpu.py  test_libs.py  test_padding.py  test_richardson_lucy.py  test_richardson_lucy_dask.py  test_richardson_lucy_nc.py  test_sphere.py  testrichardsonlucy.py
python/interactive tests/: test_libs.py  test_richardson_lucy.py  test_richardson_lucy_dask.py
python/tests/: Test_Installation.ipynb  test_libs.py  test_padding.py  test_richardson_lucy_dask.py
src/main/groovy/: deconvolve_tile_multiChs.groovy
src/main/java/net/clij2fft/deconvolution/: DemoDeconvolutionCommand.java  ImageJPopupMenuListener.java  ImagePlusComboBox.java  RichardsonLucyGUI.java  RichardsonLucyGUICommand.java  RichardsonLucyModelController.java
src/main/java/net/haesleinhuepf/clijx/: CLIJ2Pool.java  ResourcePool.java
src/main/java/net/haesleinhuepf/clijx/imglib2cache/: Clij2RichardsonLucyImglib2Cache.java  Lazy.java  Util.java
src/main/java/net/haesleinhuepf/clijx/plugins/: CombineComplexImage.java  ConvolveFFT.java  DeconvolveFFT.java  DeconvolveRLTVFFT.java  DeconvolveRichardsonLucyFFT.java  FFTFilterCommand.java  ForwardFFT.java  ImageUtility.java  InteractiveDeconvolveFFTTest.java  InverseFFT.java  (+8 more)
src/main/jython/: CLIJDecon.py  CLIJPadFFTFilter.py  batch_deconvolve_tile.py  deconvolve.py  deconvolve_theoretical.py  deconvolve_tile.py
src/main/macro/: deconvolve.ijm
src/main/resources/: plugins.config
src/resources/native/lib/: clij2fft.lib  libclFFT.dylib  libclFFT.so.2.12.2
src/resources/native/macosx-x86_64/: libjniclij2fftWrapper.dylib
(+11 files in other folders)
